--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
 # in the templates available like {{ site.myvariable }}.
-title: Clean portfolio theme for Jekyll powered by Bootstrap 4.
-email: your-email@domain.com
-brand: Your Name
+title: ootstrap4主题
+email: 991631619@qq.com
+brand: 什么催催
 headline: Inventor, Engineer and Futurist
 description: > # this means to ignore newlines until "baseurl:"
   New Site
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://example.com" # the base hostname & protocol for your site
-copyright: 2016 Whatever Company, Inc. All Rights Reserved.
+copyright: 2021 Whatever Company, Inc. All Rights Reserved.
 
 # Build settings
 markdown: kramdown
@@ -17,9 +17,9 @@ markdown: kramdown
 snapwidget: 247552
 
 # Contacts
-email: your.name@gmail.com
-phone: +1-800-555-2016
+email: 991631619@qq.com
+phone:
 
 # Tracking
-googleAnalitycsID: UA-83933844-1
+googleAnalitycsID:
 
